# AI_MultiBarcodes_Capture

./: .gitignore  CHANGELOG.md  HTTP_HTTPS_SUPPORT.md  MANAGED_CONFIGURATION.md  README.md  REMOVED_AUTO_HTTPS_PREFIX.md  UPLOAD_DEBUG_LOGGING.md  logcat.txt  settings.gradle.kts  simplification.md  startup.md
AI_MultiBarcodes_Capture/: build.gradle.kts
AI_MultiBarcodes_Capture/src/main/cpp/: CMakeLists.txt  yuv_processor.cpp
AI_MutliBarcodes_Capture/: build.gradle.kts
WebInterface/: .env  .env.example  Dockerfile  Dockerfile.simple  Dockerfile.standalone  README.md  TROUBLESHOOTING.md  build-standalone.sh  certificates.conf  composer.json  create-certificates.bat  create-certificates.sh  docker-compose.simple.yml  docker-compose.yml  fix_symbology_mapping.sql  generate-ssl.sh  reset_database.bat  run-standalone.sh  start-services.bat  start-services.sh  start.sh  startup.sh  stop.sh  supervisord.conf  test-db.php  update-network-ip.bat  update-network-ip.sh  update-webserver.bat  update-webserver.sh  xampp_start_server.bat  xampp_stop_server.bat  xampp_update_network_IP.bat  xampp_update_server.bat
XAMPP_Full_Install/: README.md  install_Xampp_to_C.bat  install_Xampp_to_D.bat  split_archive.bat
app/: build.gradle.kts
gradle/: libs.versions.toml
wiki/: 01-Quick-Start-Guide.md  02-System-Requirements.md  03-Installation-Guide-Docker.md  03-Installation-Guide.md  04-Docker-Setup-Guide.md  04-Installation-Guide-XAMPP.md  05-Web-Service-Development.md  06-API-Documentation.md  06-Database-Configuration.md  07-Android-App-Configuration.md  11-API-Documentation.md  (+19 more)
(+485 files in other folders)
